# Daemon

./: .gitignore  EXECUTIVE.md  NEXT_CONTEXT_HANDOFF.md  README.md
autonomy-engine/: README.md  pyproject.toml  run_engine.py
autonomy-engine/autonomy_engine/: __init__.py  camera.py  judge.py  logging.py  manifest.py  openai_client.py  orchestrator_client.py  perception.py  plan_utils.py  policy.py  run.py  semantics.py  shield.py  taskspec.py  tracker.py
autonomy-engine/tasks/: example.taskspec.json
autonomy-engine/tests/: test_semantics.py  test_taskspec.py
daemon-cli/: README.md  pyproject.toml  readme.txt
daemon-cli/daemon_cli/: build.py  main.py
daemon-cli/daemon_cli/generators/: integration.py
daemon-cli/daemon_cli/parsers/: annotation.py
daemon-cli/docs/: arduino_integration.md  cmake_make_integration.md  developer_quickstart.md  manifest_schema.md  manufacturers.md  protocol.md  sleepy_runbook.md
daemon-cli/examples/: run_two_nodes.sh
daemon-cli/examples/annotated_firmware/: main.c
daemon-cli/examples/manifests/: arm.yml  base.yml  collision.yml
daemon-cli/examples/node-emulator/: README.md  emulator.py
daemon-cli/examples/real_firmware_arduino/: README.md  firmware.ino
daemon-cli/firmware-code/profiles/rc_car_pi_arduino/arduino/: mecanum_firmware.ino
daemon-cli/firmware-code/profiles/rc_car_pi_arduino/raspberry_pi/: .daemon_build_state.json  PI_RUNBOOK.md  claw_daemon_node.py  daemon  (+3 more)
daemon-cli/schema/: daemon.schema.v0_1.json
daemon-cli/tests/: test_build.py  test_parsers.py
daemon-cli/tools/: smoke_test.sh
(+44 files in other folders)
