[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daemon-cli"
version = "0.1.0"
description = "Daemon firmware generation CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0"
]

[project.optional-dependencies]
ai = ["openai>=1.0.0"]

[project.scripts]
daemon = "daemon_cli.cli:main"

[tool.setuptools.packages.find]
include = ["daemon_cli*"]
